--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,40 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+ @import "../../node_modules/fontsource-montserrat/index.css";
+ @import "../../node_modules/fontsource-merriweather/index.css";
+ :root {
+	--color-primary: #005b99;
+	--color-primary-light: #d4eeff;
+	--color-text: #000000;
+	--color-text-light: #4f5969;
+	--color-heading: #1a202c;
+	--color-heading-black: black;
+	--color-accent: #d1dce5;
+
+	--spacing-px: "1px";
+	--spacing-0: 0;
+	--spacing-1: 0.25rem;
+	--spacing-2: 0.5rem;
+	--spacing-3: 0.75rem;
+	--spacing-4: 1rem;
+	--spacing-5: 1.25rem;
+	--spacing-6: 1.5rem;
+	--spacing-8: 2rem;
+	--spacing-10: 2.5rem;
+	--spacing-12: 3rem;
+	--spacing-16: 4rem;
+	--spacing-20: 5rem;
+	--spacing-24: 6rem;
+	--spacing-32: 8rem;
+	
+	--lineHeight-none: 1;
+	--lineHeight-tight: 1.1;
+	--lineHeight-normal: 1.5;
+	--lineHeight-relaxed: 1.625;
+ }
 body {
-	font-family: Verdana, sans-serif;
+	font-family: Merriweather, sans-serif;
 	margin: auto;
 	padding: 20px;
 	max-width: 65ch;
@@ -14,6 +46,15 @@ body {
 	overflow-wrap: break-word;
 	line-height: 1.5;
 	color: #444;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Montserrat, sans-serif;
+
 }
 h1,
 h2,
@@ -54,14 +95,41 @@ code {
 }
 pre {
 	padding: 1rem;
+	margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+
+}
+.blog-post-video, table {
+	margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+}
+table thead * {
+	border-bottom: solid 1px #999;
 }
 pre > code {
 	all: unset;
 }
 blockquote {
-	border: 1px solid #999;
+	border: solid black #999;
 	color: #222;
 	padding: 2px 0px 2px 20px;
 	margin: 0px;
 	font-style: italic;
 }
+
+p{
+	line-height: var(--lineHeight-relaxed);
+	--baseline-multiplier: 0.179;
+	--x-height-multiplier: 0.35;
+	margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+	padding: var(--spacing-0);
+}
+
+
+.blog-post-box p {
+	margin: unset;
+ }
+.blog-post-box {
+	margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
+	padding: var(--spacing-2) var(--spacing-2) var(--spacing-2) var(--spacing-8);
+	border-left: solid 8px #005b99;
+	background-color: var(--color-primary-light);
+  }
