fonr page almost there

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,10 +1,10 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import BlogPost from '../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog', x => !x.data.draft);
-	console.log(posts.map(x => [x.id, x.data]));	
+	// console.log(posts.map(x => [x.id, x.data]));	
 	return posts.map((post) => ({
 		params: { slug: post.slug },
 		props: post,
