--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -34,6 +34,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 			<article>
 				{heroImage && <img width={720} height={360} src={heroImage} alt="" />}
 				<h1 class="title">{title}</h1>
+				{description && <h3>{description}</h3>}
 				<FormattedDate date={pubDate} />
 				{
 					updatedDate && (
