--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -133,3 +133,20 @@ p{
 	border-left: solid 8px #005b99;
 	background-color: var(--color-primary-light);
   }
+
+  .post-preview h1 { margin: unset; }
+  .post-preview {
+	  margin-bottom: var(--spacing-8);
+  }
+
+  .post-preview a {
+	  text-decoration: none;
+  }
+  .post-preview img,video {
+	  /* max-width: 50vh; */
+	  
+	  width: 100%;
+	  height: 100px;
+	  object-fit: cover;
+	  object-position: center;
+  }
