--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,7 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 
-import '../styles/global.css';
+import '../styles/global.scss';
 
 export interface Props {
 	title: string;
@@ -18,7 +18,7 @@ const { title, description, image = '/placeholder-social.jpg' } = Astro.props;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" href="/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
