--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from '../consts';
 
 <header>
 	<h2>
-		{SITE_TITLE}
+		<img src="/profile-pic.png"/> {SITE_TITLE}
 	</h2>
 	<nav>
 		<HeaderLink href="/">Home</HeaderLink>
