--- a/src/components/Box.astro
+++ b/src/components/Box.astro
@@ -1,11 +1,11 @@
 ---
-    interface Props {
-  children: any
-} 
-const {children} = Astro.props;
+interface Props {
+  children: any;
+}
+const { children } = Astro.props;
 // replace src={import("./([^")}]*") by src={import("./$1)}
 ---
 
-  <div class="blog-post-box">
+<div class="blog-post-box">
   <slot />
-  </div>
+</div>
