--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,75 +11,116 @@ import { findImage, isVideo } from "../utils";
 // 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 // );
 let posts = await Promise.all(
-  (
-    await getCollection("blog", (x) => !x.data.draft)
-  )
-    .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
-    .map(async (x) => {
-      const b = x.data.banner
-        ? await findImage(`${x.slug}/${x.data.banner}`).catch()
-        : null;
-      return { banner: b, ...x };
-    })
+    (
+        await getCollection("blog", (x) => !x.data.draft)
+    )
+        .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
+        .map(async (x) => {
+            const rendered = await x.render();
+            const b = x.data.banner
+                ? await findImage(`${x.slug}/${x.data.banner}`).catch()
+                : null;
+            return { banner: b, rendered, ...x };
+        })
 );
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style lang="scss">
-      ul {
-        list-style-type: none;
-        padding: unset;
-      }
-      ul li {
-        display: flex;
-      }
-      ul li :global(time) {
-        flex: 0 0 130px;
-        font-style: italic;
-        color: #595959;
-      }
-      ul li a:visited {
-        color: #8e32dc;
-      }
+    <head>
+        <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+        <style lang="scss">
+            ul {
+                list-style-type: none;
+                padding: unset;
+            }
+            ul li {
+                display: flex;
+            }
+            ul li :global(time) {
+                flex: 0 0 130px;
+                font-style: italic;
+                color: #595959;
+            }
+            ul li a:visited {
+                color: #8e32dc;
+            }
 
-      .post-preview {
-        .tag {
-            margin-right: var(--spacing-1);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        {
-          posts.map((post) => {
-            return (
-              <div class="post-preview">
-                <a href={`/${post.slug}/`}>
-                  {post.data.banner &&
-                    (!isVideo(post.data.banner) ? (
-                      <img src={post.banner} />
-                    ) : (
-                      <video loop autoplay src={post.banner} />
-                    ))}
-                  <FormattedDate date={post.data.pubDate} />
-                  {post.data.tags && <span>tags</span>}
-                    {post.data.tags && post.data.tags.map(x => <a class="tag">{x}</a>)}
-                  
-                  <h1>{post.data.title}</h1>
-                </a>
-                {post.data.abstract}
-              </div>
-            );
-          })
-        }
-      </section>
-    </main>
-    <Footer />
-  </body>
+            .post-preview {
+                .tag {
+                    margin-right: var(--spacing-1);
+                }
+                a.abstract {
+                    color: inherit;
+                }
+                margin-bottom: var(--spacing-8);
+                h1 {
+                    margin: unset;
+                }
+                a {
+                    text-decoration: none;
+                }
+                img {
+                    width: 100%;
+                    height: 100px;
+                    object-fit: cover;
+                    object-position: center;
+                }
+            }
+            video {
+                width: 100%;
+                height: 100px;
+                object-fit: cover;
+                object-position: center;
+            }
+        </style>
+    </head>
+    <body>
+        <Header />
+        <main>
+            <section>
+                {
+                    posts.map((post) => {
+                        return (
+                            <div class="post-preview">
+                                <h1>
+                                    <a href={`/${post.slug}/`}>
+                                        {post.data.title}
+                                    </a>
+                                </h1>
+                                <a href={`/${post.slug}/`}>
+                                    {post.data.banner &&
+                                        (!isVideo(post.data.banner) ? (
+                                            <img src={post.banner} />
+                                        ) : (
+                                            <video
+                                                loop
+                                                autoplay
+                                                src={post.banner}
+                                            />
+                                        ))}
+                                </a>
+                                <FormattedDate date={post.data.pubDate} />
+                                {post.data.tags && <span>tags</span>}
+                                {post.data.tags &&
+                                    post.data.tags.map((x) => (
+                                        <a class="tag">{x}</a>
+                                    ))}
+
+                                <a class="abstract" href={`/${post.slug}/`}>
+                                    {
+                                        post.rendered.remarkPluginFrontmatter
+                                            .abstract
+                                    }
+                                    ..
+                                </a>
+                            </div>
+                            // <hr/>
+                        );
+                    })
+                }
+            </section>
+        </main>
+        <Footer />
+    </body>
 </html>
