--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,7 +37,7 @@ body {
   font-family: Merriweather, sans-serif;
   margin: auto;
   padding: 20px;
-  max-width: 65ch;
+  max-width: 75ch;
   text-align: left;
   background-color: #fff;
   word-wrap: break-word;
@@ -143,25 +143,7 @@ p {
   padding: var(--spacing-2) var(--spacing-2) var(--spacing-2) var(--spacing-8);
   border-left: solid 8px #005b99;
   background-color: var(--color-primary-light);
-}
-.post-preview {
-  margin-bottom: var(--spacing-8);
-  h1 {
-    margin: unset;
-  }
-  a {
-    text-decoration: none;
-  }
-  img {
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-video {
-  width: 100%;
-  height: 100px;
-  object-fit: cover;
-  object-position: center;
+}  
+hr {
+    border: 1px dotted var(--color-accent);
 }
