--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,7 +12,7 @@ export interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
+const { title, description, image = "/profile-pic.png" } = Astro.props;
 ---
 
 <!-- Global Metadata -->
