--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -35,7 +35,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
         <h1 class="title">{title}</h1>
         {description && <h3>{description}</h3>}
-        <FormattedDate date={pubDate} />
+        {pubDate && <FormattedDate date={pubDate} />}
         {
           updatedDate && (
             <div class="last-updated-on">
