--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -4,10 +4,6 @@ const { date } = Astro.props;
 
 <time datetime={date.toISOString()}>
   {
-    date.toLocaleDateString("en-us", {
-      year: "numeric",
-      month: "short",
-      day: "numeric",
-    })
+    date.toLocaleDateString()
   }
 </time>
