--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import { findImage, isVideo } from "../utils";
-
+import { Icon } from 'astro-icon'
 // const posts =  (await getCollection('blog', x => !x.data.draft)).sort(
 // 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 // );
@@ -30,6 +30,9 @@ let posts = await Promise.all(
     <head>
         <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
         <style lang="scss">
+            [astro-icon] {
+                width: 1rem;
+            }
             ul {
                 list-style-type: none;
                 padding: unset;
@@ -73,6 +76,12 @@ let posts = await Promise.all(
                 object-fit: cover;
                 object-position: center;
             }
+            .metadata {
+                display:flex;
+                * {
+                color: var(--color-text-light);
+                }
+            }
         </style>
     </head>
     <body>
@@ -100,13 +109,15 @@ let posts = await Promise.all(
                                             />
                                         ))}
                                 </a>
+                                <div class="metadata">
+<Icon name="mdi:calendar" />
                                 <FormattedDate date={post.data.pubDate} />
-                                {post.data.tags && <span>tags</span>}
+                                {post.data.tags && (<> | </><Icon name="mdi:tags" viewBox="-3 -3 25 25" />)}
                                 {post.data.tags &&
                                     post.data.tags.map((x) => (
                                         <a class="tag">{x}</a>
                                     ))}
-
+                                </div>
                                 <a class="abstract" href={`/${post.slug}/`}>
                                     {
                                         post.rendered.remarkPluginFrontmatter
