--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 
 <header>
     <div class="title">
-        <img src="/profile-pic.png" />
+        <img src="/profile-pic.png" alt="logo" />
         <h1>
           {SITE_TITLE}
         </h1>
