--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -25,6 +25,13 @@ const { title, description, pubDate, updatedDate, heroImage, banner, slug } = As
       .last-updated-on {
         font-style: italic;
       }
+      img {
+        margin-bottom: 1em;
+      }
+
+      .blog-post-video span {
+        font-style: italic;
+      }
     </style>
   </head>
 
