--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -135,6 +135,10 @@ p {
 .blog-post-video {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-8) var(--spacing-0);
 }
+
+.blog-post-video span {
+  font-style: italic;
+}
 .blog-post-box {
   p {
     margin: unset;
