--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -168,6 +168,13 @@ a[data-link] {
     visibility: visible;
 
 }
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  figcaption {
+    font-style: italic;
+  }
+}
 
 // span.icon-link::before {
 //   width: 20px;
