--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,7 +7,7 @@ import FormattedDate from "../components/FormattedDate.astro";
 import { findImage} from "../utils";
 import BlogPostMetadata from "../components/BlogPostMetadata.astro";
 type Props = CollectionEntry<"blog"> & {remarkPluginFrontmatter: Record<string, any>};
-console.log(Astro.props)
+// console.log(Astro.props)
 const { title, description, pubDate, updatedDate, heroImage, banner, slug } = Astro.props.data;
 ---
 
