--- a/src/components/BlogPostMetadata.astro
+++ b/src/components/BlogPostMetadata.astro
@@ -4,7 +4,7 @@ import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 type Props = CollectionEntry<"blog">;
 const { post } = Astro.props;
-console.log(Astro.props)
+// console.log(Astro.props)
 ---
 
 <style lang="scss">
