--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,12 +9,21 @@ export interface Props {
   description?: string;
   image?: string;
 }
-
+const isProd = import.meta.env.PROD;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const { title, description, image = "/profile-pic.png" } = Astro.props;
 ---
+{isProd &&
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8R397KD5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-Q8R397KD5D');
+</script>
+}
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
