--- a/src/content/blog/lorem-ipsum/_Run.astro
+++ b/src/content/blog/lorem-ipsum/_Run.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <script>
-    import {AstroGreet} from './rund';
+    import {AstroGreet} from './_rund';
 </script>
 
 <astro-greet {...Astro.props}></astro-greet>
