--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 <header>
     <div class="title">
       <video autoplay muted poster="/profile-pic.png" preload="metadata" alt="logo">
+        <source src="/out-1.webm"  type="video/webm"/>
         <source src="/out-1.mp4"  type="video/mp4"/>
         </video>
         <h1>
