--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,6 +90,7 @@ let posts = await Promise.all(
                                         ) : (
                                             <video
                                                 loop
+                                                muted
                                                 autoplay
                                                 src={post.banner}
                                             />
