--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -19,7 +19,7 @@ const src2 = await src;
   <video
     onclick="this.play()"
     src={src2.default}
-    autoPlay
+    autoplay
     muted
     controls={!nocontrols}
     loop={!noloop}
