--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,6 +77,7 @@ let posts = await Promise.all(
             <section>
                 {
                     posts.map((post) => {
+                        // console.log(post.data.banner, post.banner)
                         return (
                             <div class="post-preview">
                                 <h1>
@@ -86,7 +87,7 @@ let posts = await Promise.all(
                                 </h1>
                                     {post.data.banner &&
                                         (!isVideo(post.data.banner) ? (
-                                            <img src={post.banner} alt={post.data.title}/>
+                                            <img src={post.banner.src} alt={post.data.title}/>
                                         ) : (
                                             <video
                                                 loop
